--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "hls",
-  "description": "hls",
+  "name": "HLS",
+  "description": "HLS",
   "version": "0.0.1",
   "icons": {
     "64": "icons/icon.png"
@@ -22,7 +22,7 @@
 	"history"
   ],
   "background": {
-	"scripts": ["background/request_scripts.js","background/notifications.js"]
+	"scripts": ["background/background.js"]
   },
   "browser_action": {
     "default_icon": {
